--- a/src/assets/system/variables.scss
+++ b/src/assets/system/variables.scss
@@ -1,5 +1,5 @@
 $font-regular: LabGrotesque-Regular, sans-serif;
-$font-medium: LabGrotesque-Medium, sans-serif;
+$font-medium: LabGrotesque-Bold, sans-serif;
 $bg-color-red: linear-gradient(255.35deg, #DC3131 0.83%, rgba(255, 79, 79, 0) 108.93%), #FF5E56;
 $bg-shadow: 0px -0.11px 16.9495px rgba(183, 187, 225, 0.33);
 $bg-grey: rgba(0, 0, 0, 0.3), #ffffff;
@@ -9,7 +9,7 @@ $button-color-gray: #EEF0F2;
 $font-color-black: #000000;
 $font-color-idle: #BEC5CC;
 $font-color-light: #808080;
-$font-color-red: #EA0029;
+$color-warning: #EA0029;
 $font-color-white: #FFFFFF;
 $screen-laptop: 1440px;
 $screen-square: 1024px;
