--- a/src/assets/system/variables.scss
+++ b/src/assets/system/variables.scss
@@ -1,8 +1,8 @@
-$font-regular: LabGrotesque-Regular, sans-serif;
-$font-medium: LabGrotesque-Bold, sans-serif;
+$font-regular: LabGrotesqueRegular, sans-serif;
+$font-medium: LabGrotesqueMedium, sans-serif;
 $bg-color-red: linear-gradient(255.35deg, #DC3131 0.83%, rgba(255, 79, 79, 0) 108.93%), #FF5E56;
 $bg-shadow: 0px -0.11px 16.9495px rgba(183, 187, 225, 0.33);
-$bg-grey: rgba(0, 0, 0, 0.3), #ffffff;
+$bg-color-grey: #B3B3B3;
 $pop-up-color: #ffffff;
 $button-color-red: linear-gradient(255.35deg, #DC3131 0.83%, rgba(255, 79, 79, 0) 108.93%), #FF5E56;
 $button-color-gray: #EEF0F2;
