--- a/src/assets/system/variables.scss
+++ b/src/assets/system/variables.scss
@@ -6,11 +6,11 @@ $bg-color-grey: #B3B3B3;
 $pop-up-color: #ffffff;
 $button-color-red: linear-gradient(255.35deg, #DC3131 0.83%, rgba(255, 79, 79, 0) 108.93%), #FF5E56;
 $button-color-gray: #EEF0F2;
-$font-color-black: #000000;
-$font-color-idle: #BEC5CC;
-$font-color-light: #808080;
+$color-black: #000000;
+$color-idle: #BEC5CC;
+$color-light: #808080;
 $color-warning: #EA0029;
-$font-color-white: #FFFFFF;
+$color-white: #FFFFFF;
 $screen-laptop: 1440px;
 $screen-square: 1024px;
 $screen-tablet: 768px;
